<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_edit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.yuda.movielist.addEditActivity"
    android:weightSum="100"
    android:background="@android:color/holo_purple">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/nameET"
        android:hint="@string/movieName"
        android:layout_weight="10"
        android:background="#f5f14444" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:inputType="textMultiLine|textPersonName"
        android:ems="10"
        android:id="@+id/descET"
        android:hint="@string/desc"
        android:layout_weight="40"
        android:maxLines="10"
        android:background="#f1689a" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:weightSum="100">

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/urlPictureET"
            android:hint="@string/urlPicture"
            android:layout_weight="80" />

        <Button
            android:text="@string/goSearch"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/goURLBtn"
            android:layout_weight="20"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:background="@color/common_google_signin_btn_text_dark_focused"
            android:layout_margin="5dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="30"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_launcher"
            android:id="@+id/movieImageIV"
            android:layout_gravity="center_vertical|center_horizontal" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cancelBtn"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:background="@color/common_google_signin_btn_text_dark_focused"
            android:layout_margin="5dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/saveBtn"
            android:layout_weight="1"
            android:text="@string/save"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:background="@color/common_google_signin_btn_text_dark_focused"
            android:layout_margin="5dp" />
    </LinearLayout>

</LinearLayout>
